#541 Removed battery fields used to hold welcome and completion message. Updated sql scripts to populate the OOO battery's welcome and completion template types with the correct content. Updated css to wrap text.

--- a/eScreeningDashboard/src/main/webapp/resources/css/measuresWIP.css
+++ b/eScreeningDashboard/src/main/webapp/resources/css/measuresWIP.css
@@ -831,6 +831,11 @@ td.matrixQuestionText input.selectOther{
 	background: red !important;	
 }
 
+/*************************************************************/
+/********* Styles for the welcome page **************/
+#assessmentWelcome {
+	word-wrap: break-word;
+}
 
 /*************************************************************/
 /********* Styles for the complete survey page **************/
@@ -846,7 +851,10 @@ td.matrixQuestionText input.selectOther{
 }
 
 #completionText {
+	border-bottom: 1px solid #666;
+	word-wrap: break-word;
 	margin: 10px 0px;
+	padding-bottom: 20px;
     text-align: left;
 }
 
